# hiv-resistance-analytics

./: .gitignore  README.md  main.py  main.tf  pyproject.toml  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars.example
athena-loading/: athena.ipynb
aws/: test-pair.pem  tyler-pair.pem
dashboard/: dashboard-old.ipynb  dashboard.ipynb  streamlit_dashboard.py
dbt/hiv_analytics/: dbt_project.yml
dbt/hiv_analytics/models/: sources.yml  stg_pi.sql
ingestion/: S3-ingestion-old.ipynb  S3-ingestion.ipynb  S3-ingestion.py  S3_ingestion_script.py  create_crawlers.py  delete_crawlers.py  dlt-HIVDB.ipynb  dlt-HIVDB.py  dlt-s3-ingestion.ipynb  dlt-s3-ingestion_script.py  parse.py  run_crawlers.py  xml_exploration.ipynb
ingestion/hiv_analytics/models/: sources.yml  test_read.sql
notebooks/: exploration.ipynb  geno-pheno-script.ipynb  paths.txt  xml_exploration.ipynb
notebooks/geno-pheno-outputs/CVmse/: viridian_blue.txt
notebooks/geno-pheno-outputs/Confusion/: viridian_blue.txt
notebooks/geno-pheno-outputs/LARScoef/: viridian_blue.txt
orchestration/: .env  docker-compose.yml
orchestration/flows/: hiv_pipeline.yml  main_dev.local_hiv_analytics_pipeline.yml  main_tutorial_business-automation.yml  main_tutorial_business-processes.yml  main_tutorial_data-engineering-pipeline.yml  main_tutorial_hello-world.yml  main_tutorial_infrastructure-automation.yml  main_tutorial_microservices-and-apis.yml  supabase_db_copyin.yml  supabase_test.yml
sierra/: pixi.toml
supplemental/: .mcp.json
tools/sierrapy/: main.py  pyproject.toml
(+11 files in other folders)
